--- a/custom_timer/views/helpdesk_inherit.xml
+++ b/custom_timer/views/helpdesk_inherit.xml
@@ -12,7 +12,8 @@
                 <xpath expr="//field[@name='email_cc']" position="after">
                     <field name="alias_ticket" placeholder="Alias"/>
                     <field name="clasificacion_ticket" placeholder="Categoria"/>
-                    <field name="subclasificacion_ticket" placeholder="Sub-Categoria"/>
+		    <field name="subclasificacion_ticket" placeholder="Sub-Categoria"/>
+		    <field name="canal_type" placeholder="Canal"/>
                 </xpath>
             </field>
         </record>
